# legion

./: .gitignore  Cargo.toml  package.json
.cargo/: config.toml
.run/: build wasi target.run.xml  build-wasi.sh  test.sh
projects/legion-app/: Cargo.toml  add.wit
projects/legion-app/add/: Cargo.toml
projects/legion-app/src/: lib.rs  main.rs
projects/legion-app/src/cli_cmds/: cmd_add.rs  cmd_decode.rs  cmd_encode.rs  cmd_install.rs  cmd_new.rs  mod.rs
projects/legion-app/src/cli_cmds/cmd_add/: mod.rs
projects/legion-app/src/cli_cmds/cmd_decode/: mod.rs  tests.rs
projects/legion-app/src/cli_cmds/cmd_decode/decode_component/: index.js
projects/legion-app/src/cli_cmds/cmd_encode/: mod.rs  tests.rs
projects/legion-app/src/cli_cmds/cmd_install/: mod.rs
projects/legion-app/src/cli_cmds/cmd_new/: mod.rs
projects/legion-app/src/cli_cmds/cmd_run/: mod.rs  run_wasm.rs
projects/legion-app/src/helpers/: arg_io.rs  mod.rs
projects/legion-cli/: Cargo.toml  readme.md
projects/legion-cli/src/: lib.rs  main.rs
projects/legion-cli/src/commands/: mod.rs
projects/legion-cli/src/commands/cmd_build/: mod.rs
projects/legion-cli/src/commands/cmd_decode/: mod.rs
projects/legion-cli/src/commands/cmd_encode/: mod.rs
projects/legion-cli/src/commands/cmd_polyfill/: mod.rs
projects/legion-cli/src/commands/cmd_run/: mod.rs
projects/legion-cli/src/commands/cmd_update/: mod.rs
projects/legion-cli/src/commands/run_build/: mod.rs
projects/legion-cli/src/commands/run_decode/: mod.rs
projects/legion-cli/src/commands/run_encode/: mod.rs
projects/legion-cli/src/commands/run_polyfill/: mod.rs
projects/legion-cli/src/errors/: convert.rs  mod.rs
projects/legion-cli/src/tools/: mod.rs
projects/legion-config/: Cargo.toml  legion.schema.json
projects/legion-config/src/: lib.rs
projects/legion-config/src/authors/: mod.rs
projects/legion-config/src/config/: mod.rs
projects/legion-config/src/dependencies/: mod.rs
projects/legion-config/src/dependency/: display.rs  mod.rs  readme.md
projects/legion-config/src/package/: mod.rs
projects/legion-config/src/types/features/: mod.rs
projects/legion-config/src/version/: mod.rs
projects/legion-config/src/workspace/: mod.rs
projects/legion-config/tests/: main.rs  module.json  workspace.json
projects/legion-config/tests/dependency/: deps1.json5
projects/legion-config/tests/mock1/: valor.toml  workspace.toml
projects/legion-config/tests/workspace/: module.json  nothing.json  nothing.toml  workspace.json
projects/legion-npm/: package.json
projects/legion-npm/src/: index.ts
projects/legion-wasm32-wasi/: Cargo.toml  jsr.json  legion-create.js  legion.js  package-lock.json  package.json
projects/legion-wit/: Cargo.toml
projects/legion-wit/src/: bindings.rs  lib.rs
projects/legion-wit/src/tools/: mod.rs
projects/legion-wit/wit/: world.wit
projects/v-cli/: Cargo.toml
projects/v-wasm32-wasi/: package.json
projects/valor-config/: Cargo.toml  Readme.md
projects/valor-config/src/: errors.rs  lib.rs  macros.rs
projects/valor-config/src/config/: der.rs  mod.rs
projects/valor-config/src/dependency/: der.rs  display.rs  mod.rs
projects/valor-config/src/package/: der.rs  display.rs  mod.rs  name.rs
projects/valor-config/src/types/: mod.rs
projects/valor-config/src/types/features/: mod.rs
projects/valor-config/src/types/name/: mod.rs
projects/valor-config/src/workspace/: mod.rs
projects/valor-config/tests/: main.rs  valor.toml
projects/valor-config/tests/dependency/: deps2.toml  mod.rs
