[workspace]
resolver = "2"
members = ["projects/*"]
default-members = [
    "projects/legion-app",
    "projects/legion-config",
]
exclude = [
    "projects/.DS_Store",
]

[profile.release]
lto = true
panic = "abort"

[workspace.dependencies.tokio]
version = "1.42.0"
features = ["full"]

[workspace.dependencies.reqwest]
version = "0.12.9"
default-features = false
features = ["rustls-tls", "json", "socks"]