[workspace]
resolver = "2"
members = ["projects/*"]
default-members = [
#    "projects/v-cli",
    "projects/legion-cli",
]
exclude = [
    "projects/.DS_Store",
    "projects/v-wasm32-wasi",
    "projects/legion-wasm32-wasi"
]

[profile.release]
lto = true
panic = "abort"

[workspace.dependencies.tokio]
version = "1.43.0"
default-features = true
features = ["macros", "rt"]

[workspace.dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["rustls-tls", "json", "socks"]

#[workspace.dependencies.wasmtime]
#version = "28.0.0"
#default-features = false
#features = [
#    "cranelift",
#    "gc-drc",
#    "component-model",
#]
#[workspace.dependencies.wasmtime-wasi]
#version = "28.0.0"
#default-features = false