[package]
name = "legion"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Valkyrie workspace manager"
repository = "https://github.com/nyar-vm/valkyrie-valor"
documentation = "https://docs.rs/valor-config"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
url = "2.5.4"
tokio = { version = "1.42.0", features = ["full"] }
wat = { version = "1.222.0", features = ["component-model", "dwarf"] }
wasmprinter = { version = "0.222.0", features = ["component-model"] }
reqwest = "0.12.9"

[dev-dependencies]

[features]
default = []
