[package]
name = "legion"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Valkyrie workspace manager"
repository = "https://github.com/nyar-vm/valkyrie-valor"
documentation = "https://docs.rs/valor-config"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
url = "2.5.4"
wat = { version = "1.222.0", features = ["component-model", "dwarf"] }
wasmprinter = { version = "0.222.0", features = ["component-model"] }
js-component-bindgen = "1.8.1"
tokio = { workspace = true }
reqwest = { workspace = true }


[dependencies.wasmtime]
version = "28.0.0"
default-features = false
features = [
    "cranelift",
    "gc-drc",
    "component-model",
]
[dependencies.wasmtime-wasi]
version = "28.0.0"
default-features = false


[dev-dependencies]

[features]
default = []
