[package]
name = "legion"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Valkyrie workspace manager"
repository = "https://github.com/nyar-vm/valkyrie-valor"
documentation = "https://docs.rs/valor-config"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
#url = "2.5.4"
wat = { version = "1.224.0", features = ["component-model", "dwarf"] }
wasmprinter = { version = "0.224.0", features = ["component-model"] }
js-component-bindgen = "1.9.1"
reqwest = "0.12.12"
#inquire = "0.7.5"
dialoguer = "0.11.0"
tokio = { version = "1.43.0", features = ["rt", "macros"] }
tempfile = "3.16.0"

[dev-dependencies]

[features]
default = []

[package.metadata.component]
package = "legion:tools"
