[package]
name = "valor-config"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Valkyrie workspace manager"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = "1.0.152"
serde_derive = "1.0.152"
serde-types = "0.1.1"
config = "0.13.3"
valkyrie-errors = "0.0.2"

[dev-dependencies]

[features]
default = []
