[package]
name = "valor-config"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Valkyrie workspace manager"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = "1.0.152"
serde_derive = "1.0.152"
#config = "0.13.3"
semver = { version = "1.0.16", features = ["serde"] }
toml = "0.7.2"

[dependencies.serde-types]
#path = "../serde-types"
version = "0.0.2"

[dependencies.valkyrie-errors]
path = "F:\\React\\valkyrie.rs\\projects\\valkyrie-errors"
#version = "0.0.2"

[dev-dependencies]

[features]
default = []
